[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
specs = { version = "0.19.0", features = ["specs-derive"] }
tcod = { git= "https://github.com/tomassedovic/tcod-rs.git"}
